--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
           python -m pip install --upgrade twine
           pip install pyinstaller
           pip install -r requirements.txt
+          pip install pillow
 
       - name: Build package
         run: |
