--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build Wheel
         run: |
-          python -m build --wheel 
+          python -m build --wheel --sdist
 
       - name: Build Executable
         run: |
